# vocium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-TW.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
app-tauri/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.package.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/icons/: icon.icns
app-tauri/src-tauri/src/: lib.rs  main.rs  mcp.rs
app-tauri/ui/: app.js  i18n.js  index.html  settings.html  settings.js  styles.css
docs/: CONFIGURATION.md  CONFIGURATION.zh-TW.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  DESIGN_MOCKUP.html  ICON_DESIGN.html  ROADMAP.md  ROADMAP.zh-TW.md  SPEC.md
docs/assets/: showcase.html
docs/projects/vocium/: SUMMARY.md
scripts/: build-sidecar-bin.mjs  copy-vad-assets.mjs  gen-banner.mjs  gen-icons.mjs  gen-sample-audio.ps1  probe-groq.mjs  smoke-sidecar-bin.mjs
src/core/: config.ts  health.ts  state-machine.ts  zh-convert.ts
src/core/audio/: trim-silence.ts
src/core/inject/: injector.ts  linux.ts  macos.ts  types.ts  windows.ts
src/core/polish/: polish.ts  prompts.ts
src/sidecar/: index.ts  main.ts  mcp-tools.ts  pipeline.ts
tests/: config.test.ts  describe-error.test.ts  gemini-stt.test.ts  groq-stt.test.ts  health.test.ts  inject.test.ts  mcp.test.ts  models.test.ts  openai-stt.test.ts  pipeline.test.ts  polish.test.ts  resolve-active.test.ts  resolve-polish-key.test.ts  state-machine.test.ts  stt.test.ts  trim-silence.test.ts  with-timeout.test.ts  zh-convert.test.ts
(+10 files in other folders)
